# rabbitmq-amqp-python-client

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.ci/certs/: ca_certificate.pem  ca_key.pem  client_localhost.p12  client_localhost_certificate.pem  client_localhost_key.pem  server_localhost.p12  server_localhost_certificate.pem  server_localhost_key.pem
.ci/ubuntu/: gha-setup.sh
.github/workflows/: build-test.yaml
examples/: README.md
examples/quorum_queue_sac/: example_quorum_queue_sac.py
examples/rejected_messages/: example_rejected_messages.py
examples/rpc/: client.py  server.py
examples/streams/: example_with_streams.py
rabbitmq_amqp_python_client/: __init__.py  amqp_consumer_handler.py  connection.py  consumer.py  delivery_context.py  entities.py  environment.py  exceptions.py  management.py  options.py  publisher.py
rabbitmq_amqp_python_client/asyncio/: connection.py  consumer.py  environment.py
rabbitmq_amqp_python_client/qpid/proton/: _flow_properties.py  _handler.py  _handlers.py  _utils.py
tests/: conftest.py  test_connection.py  test_consumer.py  test_publisher.py  test_quorum_queue_sac.py  test_settled_consumer.py  test_streams.py  utils.py
tests/asyncio/: test_connection.py  test_consumer.py  test_publisher.py  test_streams.py
tests/direct_reply_to/: test_direct_reply.py
