[tool.poetry]
name = "rabbitmq-amqp-python-client"
version = "0.7.0"
description = "Python RabbitMQ client for AMQP 1.0 protocol"
authors = ["RabbitMQ team"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-qpid-proton = "^0.40.0"
typing-extensions = "^4.15.0"
packaging = "^26.0"


[tool.poetry.group.dev.dependencies]
pyjwt = "^2.12.1"
pika = "^1.4.0"
flake8 = "^7.3.0"
isort = "^8.0.1"
mypy = "^1.20.1"
pytest = "^9.0.3"
black = "^26.3.1"
requests = "^2.33.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "rabbitmq_amqp_python_client/qpid"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
console_output_style = "count"